# 13_ecoskills

./: .gitignore  .gitmodules  .pre-commit-config.yaml  pyproject.toml
.github/workflows/: pre-commit.yaml
Frontend/: Main.py
rag_system/: .gitignore  docker-compose.yml
rag_system/ingestion_manager/: pyproject.toml
rag_system/ingestion_manager/ingestion_manager/: ingestion_manager.py
rag_system/kotaemon_install_guide/: README.md
rag_system/pipeline_scripts/: .gitignore  fast_ingestion_new_pipeline_rh_third_version_synthesis.py  fast_ingestion_pipeline_rh.py  fast_ingestion_pipeline_rh_first_version_inference_metadatas.py  fast_ingestion_pipeline_rh_second_version_direct_inference.py  fast_ingestion_pipeline_rh_third_version_synthesis.py  fast_retrieval_pipeline_rh_clustering_1.py  fast_retrieval_pipeline_rh_clustering_2.py  fast_retrieval_pipeline_rh_new_raw copy.py  fast_retrieval_pipeline_rh_new_raw.py  fast_retrieval_pipeline_rh_qdrant_direct.py  fast_retrieval_pipeline_rh_qdrant_direct_all_context_by_mission.py  fast_retrieval_pipeline_rh_qdrant_direct_all_context_without_metadatas.py  fast_retrieval_pipeline_rh_qdrant_direct_old_version.py  fast_retrieval_pipeline_rh_without_metadatas.py  teeeeest.py
rag_system/pipeline_scripts/prompts_rh/: missions.py
rag_system/taxonomy/taxonomy/: document.py  ressources_humaines.py
we_learn/: main.py
