[project]
name = "ingestion_manager"
version = "0.1.0"
description = "A litlle additional lib to manage ingestion index file (for fast script ingstion)"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
packages = ["ingestion_manager"]